# snex

./: .credo.exs  .envrc  .formatter.exs  .gitignore  CHANGELOG.md  Makefile  NOTICE  README.md  docker-compose.yml  mix.exs  snippets.ex
.github/workflows/: ci.yml  release.yml
c_src/: env_reference_nif.c
config/: config.exs
doc_helpers/: gen_python_doc.py
doc_helpers/script/: rename_python_interface_docs.js  rename_python_interface_documentation.js
lib/: snex.ex
lib/snex/: application.ex  code.ex  env.ex  error.ex  interpreter.ex  release.ex  serde.ex  sigils.ex
lib/snex/internal/: commands.ex  custom_interpreter.ex  garbage_collector.ex  os_monotonic.ex  paths.ex  pickler.ex  script.ex  scripts.ex  system.ex  telemetry.ex
lib/snex/internal/telemetry/: command_span.ex
py_src/: pyproject.toml  snex.py
py_src/snex/: __init__.py  __main__.py  code.py  compat.py  etf.py  interface.py  logger.py  models.py  runner.py  serde.py  transport.py
test/: cluster_test.exs  docker_example_test.exs  gc_test.exs  logging_test.exs  multiprocessing_test.exs  pypy_example_test.exs  release_test.exs  serde_test.exs  snex_test.exs  telemetry_test.exs  test_helper.exs
test/fixtures/: interpreters.ex  snex_serde_encoder_date.ex
test/internal/: os_monotonic_test.exs
test/my_python_proj/: foo.py  in_multiprocessing_process.py  pyproject.toml
